Remove kmailservice5, it can only do harm at this point.

With no other mail client installed, it would trigger an infinite loop:
kde-open5 => kmailservice5 => xdg-open => kde-open5 ...

The mechanism defined by XDG (looking up what is associated with x-scheme-handler/mailto)
and used by the KCM (it saves the chosen app into mimeapps.list using that 'mimetype'),
and by KRun to pick up the app... means that there is no need for a generic executable
like kmailservice5 anymore. It was only useful for kdelibs4's .protocol files, which
the x-scheme-handler mechanism replaces.

FIXED-IN: 5.22
BUG: 354151